# myshelf

./: .gitignore  README.md  pyproject.toml
src/myshelf/: __init__.py  app.py  book.py  cover.py  logging_config.py  shelf.py
tests/: test_book.py  test_cover.py  test_shelf.py
tests/data/: Sunrise on the Reaping.md  The Hobbit.md
